# lato

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  py.typed  pyproject.toml
.github/workflows/: release.yml  tests.yml
docs/: api.rst  concurrency.rst  conf.py  dependency_provider.rst  index.rst  requirements.txt  testing.rst
docs/key_concepts/: cq_composition.rst  dependency_injection.rst  events.rst  handlers.rst  index.rst  middlewares.rst  modularity.rst  transaction_context.rst
docs/key_concepts/src/: example1_app.py  example1_module.py
docs/tutorial/: index.rst  tutorial_01.rst  tutorial_02.rst  tutorial_03.rst  tutorial_04.rst  tutorial_05.rst  tutorial_06.rst
docs/tutorial/src/: analytics.py  application.py  commands.py  conftest.py  events.py  main.py  notifications.py  queries.py  test.py  todos.py
examples/: example5.py  example6.py
examples/async_example/: example1.py  example2.py  toy.py
examples/example1/: application.py  commands.py  employee_module.py  events.py  project_module.py  tasks.py
examples/example2/: common.py  employee_module.py  main.py
examples/example2/project/: __init__.py  entities.py
examples/example3/: dependency_injector_integration.py  lagom_integration.py
examples/example4/: README.md  application.py  commands.py  marketing.py  repository.py  sales.py  tasks.py  tests.py  value_objects.py  warehouse.py
lato/: __init__.py  application.py  application_module.py  compositon.py  dependency_provider.py  exceptions.py  message.py  testing.py  transaction_context.py  types.py  utils.py
tests/: conftest.py  sample_application.py  test_application.py  test_application_async.py  test_application_example_from_readme.py  test_composition.py  test_dependency_provider.py  test_events.py  test_modular_application.py  test_sample_application_overriding.py  test_transaction_context.py  test_transaction_context_async.py
tests/modular_application/: __init__.py  employee_module.py
tests/modular_application/project_module/: __init__.py  events.py  use_cases.py
