[tool.poetry]
name = "lato"
version = "0.7.0"
description = "Lato is a Python microframework designed for building modular monoliths and loosely coupled applications."
authors = ["Przemysław Górecki <przemyslaw.gorecki@gmail.com>"]
readme = "README.md"
repository = "https://github.com/pgorecki/lato"
homepage = "https://github.com/pgorecki/lato"
documentation = "https://github.com/pgorecki/lato/docs"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.2"
pydantic = "^2.4.2"
pre-commit = "^3.5.0"

[tool.poetry.dev-dependencies]
pre-commit = "^3.5.0"
build = "^1.0.3"
twine = "^4.0.2"
Sphinx = "^7.2.6"
myst-parser = "^2.0.0"
lagom = "^2.5.0"
sphinx-autobuild = "^2021.3.14"
dependency-injector = "^4.41.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
