[tool.poetry]
name = "lato"
version = "0.10.0"
description = "Lato is a Python microframework designed for building modular monoliths and loosely coupled applications."
authors = ["Przemysław Górecki <przemyslaw.gorecki@gmail.com>"]
readme = "README.md"
repository = "https://github.com/pgorecki/lato"
homepage = "https://github.com/pgorecki/lato"
documentation = "https://lato.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = "MIT"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/pgorecki/lato/issues"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.4.2"
mergedeep = "^1.3.4"
pytest-asyncio = "^0.23.5.post1"

[tool.poetry.group.dev.dependencies]
build = "^1.0.3"
twine = "^4.0.2"
pytest = "^7.4.2"
Sphinx = "^7.2.6"
myst-parser = "^2.0.0"
sphinx-autodoc-typehints = "^2.0.0"
sphinx-autobuild = "^2021.3.14"
mypy = "^1.6.1"
sphinx-rtd-theme = "^1.3.0"

[tool.poetry.group.examples.dependencies]
dependency-injector = "^4.41.0"
lagom = "^2.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
